# origis-lang

./: Cargo.toml  LICENSE  README.md  build.rs
benches/: interp.rs  parser.rs
examples/: fib.gs  interp.rs  sum.gs  test.gs
src/: grammar.pest  lib.rs  main.rs
src/analyze/: analyzer.rs  mod.rs  scope.rs
src/analyze/typed_ast/: block.rs  decl.rs  expr.rs  ident.rs  mod.rs  module.rs  op.rs  stmt.rs  type.rs  value.rs
src/interpreter/: error.rs  eval.rs  func.rs  mod.rs  value.rs
src/interpreter/gc/: mod.rs
src/jit/: compile_ast.rs  mod.rs
src/parser/: ast.rs  lexer.rs  mod.rs  parser.rs  rollbackable.rs  token.rs
src/parser/parse/: attr.rs  block.rs  decl.rs  error.rs  expr.rs  ident.rs  mod.rs  module.rs  stmt.rs  type_literal.rs
src/std/: io.gs  mem.gs
src/stdlib/: builtin  mod.rs
src/stdlib/io/: mod.gs  mod.rs
src/wasm/: compiler.rs  mod.rs  scope.rs  wasm_module.rs
src/wasm/compile/: block.rs  expr.rs  func.rs  mod.rs  module.rs
src/wasm/rt/: context.rs  mod.rs
