[package]
name = "origis-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
compact_str = "0.2.0"
thiserror = "1.0"
smallvec = { version = "1.7.0", features = ["union", "const_generics", "const_new"] }
itertools = "0.10.3"
rust-embed = { version = "6.3.0", features = ["compression", "include-exclude"] }
phf = { version = "0.10.0", features = ["macros"] }
snmalloc-rs = { version = "0.2.28", features = ["cache-friendly", "native-cpu"] }

gc = { version = "0.4", features = ["derive", "nightly"] }

anyhow = "1"
ahash = "0.7.6"
cfg-if = "1.0.0"
walkdir = "2.3.2"

inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"], optional = true }

wasm-encoder = { version = "0.9.0", optional = true }
wasmprinter = { version = "0.2", optional = true }
wasmparser = { version = "0.82", optional = true }
wasmtime = { version = "0.33", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
llvm = ["inkwell"]
wasm_compile = ["wasm-encoder", "wasmprinter", "wasmparser"]
wasm64 = []
wasm_rt = ["wasm_compile", "wasmtime", "tokio"]

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "interp"
harness = false

[profile.bench]
lto = "fat"
